# RM2019-Artinx-Guardian-ROS

./: .gitignore  README.md
auto_start/: start.sh  usb.sh
dev_doc/: 20190328.md  20190422.md  20190425.md  problem@20190422.md
roborts_bringup/launch/: gimbal_vision.launch  libuvc.launch
roborts_camera/camera_cali_data/: H_6mm_1080P_IR  H_6mm_1080P_IR.prototxt  USB500W02M.prototxt
roborts_camera/config/: camera_param.prototxt
roborts_detection/armor_detection/: armor_detection_node.cpp  gimbal_control.cpp
roborts_detection/armor_detection/config/: armor_detection.prototxt
serial_send/: CMakeLists.txt  package.xml  serial_send_node.cpp  serial_send_node.h
